<resources>
    <string name="app_name">ShoppingApp</string>

    <string name="title_account">Account</string>
    <string name="title_checkout">Checkout</string>
    <string name="title_favourite">Favourite</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>

    <string name="share">Share</string>
    <string name="favourite">Favourite</string>

</resources>